# a3-persistence

./: .env  .gitignore  .glitch-assets  Cargo.toml  Dioxus.toml  README copy.md  README.md  app.js  auth.env  auth.js  config.js  data.json  db.js  index.html  initialize_users.js  main.html  main.js  old_server.js  package-lock.json  package.json  passport-config.js  server-2.js  server.js  server.mjs  shrinkwrap.yaml  tailwind.config.js  vercel.json
a3-kjavsmith/: README copy.md  package-lock.json  package.json  server.js
a3-kjavsmith/public/: index.html  login.html  script.js
api/: server.js
app/models/: Score.model.js  User.model.js
app/routes/: api.mjs  (+3 more)
assets/: output.css
bookmark-app/: package-lock.json  package.json
code backups/: server copy.js
css/: main.css
js/: main.js
models/: sushiModel.js
public/: app.js  auth.html  bookmarks.html  calculate.html  client.js  create.html  home.html  index.html  indexStyle.css  login.ejs  login.html  login.js  main.css  main.html  main.js  mvp.html  newAccount.html  package.json  page.html  register.html  register.js  robots.txt  script.js  server.js  sitemap.txt  style.css  styles.css  table.html  table.js  todo.ejs  tracker.html  welcomeBack.html  wizard.html
routes/: index.js  order-routes.js
src/: database.go  db.db  go.mod  index.js  main.go  main.rs  package-lock.json  routes.rs  types.rs
static/: index.html
views/: create.handlebars  home.ejs  index.ejs  index.handlebars  index.html  login.ejs  login.handlebars  main.handlebars  main.html  mainAdd.handlebars  mainRem.handlebars  register.ejs
(+41 files in other folders)
